--- a/app/views/supply_teachers/home/_after_12_weeks_and_no_notice_date.html.erb
+++ b/app/views/supply_teachers/home/_after_12_weeks_and_no_notice_date.html.erb
@@ -1,7 +1,5 @@
 <p>
-  <%= t('supply_teachers.home.temp_to_perm_fee.after_12_weeks_and_no_notice_date',
-        max_fee: number_to_currency(calculator.maximum_fee_for_lack_of_notice),
-        latest_notice_date: calculator.notice_date_based_on_hire_date.to_s(:long_with_day)) %>
+  <%= t('supply_teachers.home.temp_to_perm_fee.after_12_weeks_and_no_notice_date') %>
 </p>
 
 <%= render partial: 'avoid_paying_fees', locals: { calculator: calculator } %>
