Add note about negotiable fees to temp-to-perm fee results
Based on feedback from Louise.

--- a/app/views/supply_teachers/home/_between_9_and_12_weeks_and_enough_notice.html.erb
+++ b/app/views/supply_teachers/home/_between_9_and_12_weeks_and_enough_notice.html.erb
@@ -1,6 +1,9 @@
 <p>
   <%= t('supply_teachers.home.temp_to_perm_fee.between_9_and_12_weeks_and_enough_notice') %>
 </p>
+<p>
+  <%= t('supply_teachers.home.temp_to_perm_fee.fees_are_negotiable') %>
+</p>
 
 <h2>Calculation</h2>
 
