--- a/app/views/supply_teachers/home/_within_first_8_weeks.html.erb
+++ b/app/views/supply_teachers/home/_within_first_8_weeks.html.erb
@@ -1,6 +1,9 @@
 <p>
   <%= t('supply_teachers.home.temp_to_perm_fee.within_first_8_weeks') %>
 </p>
+<p>
+  <%= t('supply_teachers.home.temp_to_perm_fee.fees_are_negotiable') %>
+</p>
 
 <h2>Calculation</h2>
 
