Update paragraph about avoiding paying fees
In order to make the language more neutral based on feedback from
Andrew's user research session. As suggested by Louise.

--- a/app/views/supply_teachers/home/_avoid_paying_fees.html.erb
+++ b/app/views/supply_teachers/home/_avoid_paying_fees.html.erb
@@ -1,2 +1,9 @@
-<h2>Avoid paying fees</h2>
-<p>If you make the worker permanent on <%= @calculator.ideal_hire_date.to_formatted_s(:long_with_day) %> and give notice to the agency on <%= @calculator.ideal_notice_date.to_formatted_s(:long_with_day) %> then you can avoid paying any fees to the agency.</p>
+<p>
+  Give notice to the agency on <%= @calculator.ideal_notice_date.to_formatted_s(:long_with_day) %> and make the worker permanent on <%= @calculator.ideal_hire_date.to_formatted_s(:long_with_day) %>
+  <% if @calculator.hiring_after_12_weeks? %>
+    to
+  <% else %>
+    so they've been in post for over 12 weeks and you
+  <% end %>
+  provide 4 weeks’ notice. 
+</p>
