Display a range in temp-to-perm fee results
If hiring after 12 weeks but not specifying a notice date then we only
know a range of possible fees.

--- a/app/views/supply_teachers/home/temp_to_perm_fee.html.erb
+++ b/app/views/supply_teachers/home/temp_to_perm_fee.html.erb
@@ -7,7 +7,11 @@
         </h1>
         <div class="govuk-panel__body">
           <%= t('.panel_body') %>
-          <br><strong><%= number_to_currency(@calculator.fee) %></strong>
+          <% if @calculator.hiring_after_12_weeks? && @calculator.notice_date.blank? %>
+            <br>between <strong>£0</strong> and <strong><%= number_to_currency(@calculator.maximum_fee_for_lack_of_notice) %></strong>
+          <% else %>
+            <br><strong><%= number_to_currency(@calculator.fee) %></strong>
+          <% end %>
         </div>
       </div>
     </div>
