--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -16,12 +16,12 @@
 
         <p>
           <%= t('.dfe_signin.create_account_html',
-                link: support_email_link(t('.cmp_support_aria_label'))) %>
+                url: dfe_account_request_url) %>
         </p>
 
         <p>
           <%= t('.dfe_signin.outside_england_html',
-                link: support_email_link(t('.cmp_support_aria_label'))) %>
+                url: dfe_account_request_url) %>
         </p>
       <% end %>
 
