--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
         </div>
       </div>
       <% if @back_path.present? %>
-        <%= link_to t('.back'), @back_path, class: 'govuk-back-link ccs-no-print' %>
+        <%= link_to t('.back'), @back_path, class: 'govuk-back-link ccs-no-print', 'aria-label': t('.back_aria_label') %>
       <% end %>
       <main class="govuk-main-wrapper" id="main-content" role="main">
         <%= yield %>
