--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -73,23 +73,30 @@
     </div>
 
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-    <% if @branches.any? %>
-      <%= render partial: 'branch', collection: @branches %>
-    <% end %>
-  </div>
-</div>
-<div class="govuk-grid-row ccs-no-print">
-  <div class="govuk-grid-column-full">
-    <p class="govuk-body supplier-record__print-option">
-      <a href="javascript:window.print()" class="govuk-link ga-print-link"><%= t('.print') %></a>
-    </p>
-    <p class="govuk-body supplier-record__print-option">
-      <%= link_to t('.download'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx)), { class: 'supplier-record__file-download ga-download-shortlist', 'aria-label': t('.download_aria_label') } %>
-    </p>
-    <p class="govuk-body supplier-record__print-option">
-      <% if link_to_calculator? %>
-      <%= link_to t('.download_with_calculator'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx, calculations: 'yes')), { class: 'supplier-record__file-download ga-download-calculator', 'aria-label': t('.download_with_calculator_aria_label') } %>
-      <% end %>
-    </p>
+
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <% if @branches.any? %>
+          <%= render partial: 'branch', collection: @branches %>
+        <% end %>
+      </div>
+      <div class="govuk-grid-column-one-third">
+        <div class="cmp-sidebar ccs-no-print">
+          <h2 class="govuk-heading-s"><%= t('.related_actions_html') %></h2>
+          <p class="govuk-body govuk-body-s supplier-record__print-option">
+            <a href="javascript:window.print()" class="govuk-link ga-print-link"><%= t('.print') %></a>
+          </p>
+          <p class="govuk-body govuk-body-s supplier-record__print-option">
+            <%= link_to t('.download'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx)), { class: 'supplier-record__file-download ga-download-shortlist', 'aria-label': t('.download_aria_label') } %>
+          </p>
+          <p class="govuk-body govuk-body-s supplier-record__print-option">
+            <% if link_to_calculator? %>
+            <%= link_to t('.download_with_calculator'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx, calculations: 'yes')), { class: 'supplier-record__file-download ga-download-calculator', 'aria-label': t('.download_with_calculator_aria_label') } %>
+            <% end %>
+          </p>
+
+        </div>
+      </div>
+    </div>
   </div>
 </div>
