(chore) Update the guidance text on the service Start page

--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -16,7 +16,8 @@
 
         <p>
           <%= t('.dfe_signin.create_account_html',
-                url: dfe_account_request_url) %>
+                gias_url: 'https://get-information-schools.service.gov.uk/',
+                dfe_sign_in_url: 'http://help.signin.education.gov.uk/contact') %>
         </p>
 
         <p>
