(chore) include all of the options available under the framework agreement
Amended the text on this page to include:

view the rates the suppliers charge
check the breakdown of the rates the suppliers charge

Unfortunately this page is not internationalised, and I had hoped to internationalise it as part of the ticket but we're pressed for time

--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -11,6 +11,8 @@
         <li>find and hire a worker using an agency</li>
         <li>hire a specific person using an agency (a ‘nominated worker’)</li>
         <li>find a managed service provider, who can take on all your temporary staff needs</li>
+        <li>view the rates the suppliers charge</li>
+        <li>check the breakdown of the rates the suppliers charge</li>
         <li>create a shortlist of suppliers based on your needs and download it</li>
         <li>calculate the maximum you could be charged to make your agency worker permanent</li>
       </ul>
