--- a/app/assets/stylesheets/components/footer/_footer.scss
+++ b/app/assets/stylesheets/components/footer/_footer.scss
@@ -57,8 +57,15 @@ a.ccs-footer__links {
 }
 
 .govuk-footer__logotype svg {
-  width: 233px;
+  width: 110px;
   height: 90px;
+}
+
+.govuk-footer__logotype_dfe svg {
+  width: 85px;
+  height: 69px;
+  vertical-align: top;
+  margin-left: 10px;
 }
 
 .footer-feedback {
@@ -68,12 +75,17 @@ a.ccs-footer__links {
 @media (min-width: 641px) {
 
   .govuk-footer__logotype svg {
-    width: 292px;
+    width: 140px;
   }
 
   .govuk-footer__logotype svg,
   .govuk-footer__meta {
     height: 113px;
+  }
+
+  .govuk-footer__logotype_dfe svg {
+    width: 75px;
+    height: 61px;
   }
 
   .govuk-footer__meta {
