--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
               <%= render partial: '/layouts/logotype' %>
             </span>
           </a>
+          <span class="govuk-header__logotype_dfe">
+            <%= render partial: '/layouts/logotype_dfe' %>
+          </span>
         </div>
         <div class="govuk-header__content">
           <%= link_to_service_start_page %>
@@ -114,6 +117,9 @@
         <div class="govuk-grid-column-one-third">
           <span class="govuk-footer__logotype">
             <%= render partial: '/layouts/logotype' %>
+          </span>
+          <span class="govuk-footer__logotype_dfe">
+            <%= render partial: '/layouts/logotype_dfe' %>
           </span>
         </div>
 
