(chore) Turn text in to I18n strings for mark-up calculator

--- a/app/views/supply_teachers/branches/_branch.html.erb
+++ b/app/views/supply_teachers/branches/_branch.html.erb
@@ -39,7 +39,7 @@
   <div class="govuk-!-padding-3 supplier-record__calculator">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <h4 class="govuk-heading-s">Obtain a quote from the supplier to check the breakdown of daily rate</h4>
+        <h4 class="govuk-heading-s"><%= t('.calculator.heading') %></h4>
       </div>
     </div>
 
@@ -47,7 +47,7 @@
       <div class="govuk-grid-column-one-third">
         <div class="govuk-form-group govuk-!-margin-0">
           <label class="govuk-label govuk-!-font-size-16" for="daily_rate_<%= branch.id %>">
-            Enter daily rate
+            <%= t('.calculator.daily_rate') %>
           </label>
           <div class="calculator-form__day-rate">
             <%= text_field_tag "daily_rate[#{branch.id}]", branch.daily_rate, class: 'govuk-input govuk-input--width-10 calculator-form__day-rate-input' %>
@@ -57,7 +57,7 @@
       </div>
       <div class="govuk-grid-column-one-third <%= 'supplier-record__calculator--muted' unless branch.worker_cost %>">
         <p class="govuk-body govuk-!-font-size-16 govuk-!-margin-0">
-          Cost of the worker
+          <%= t('.calculator.worker_cost') %>
         </p>
         <p class="govuk-body supplier-record__worker-cost">
           <% if branch.worker_cost %>
@@ -67,12 +67,12 @@
       </div>
       <div class="govuk-grid-column-one-third <%= 'supplier-record__calculator--muted' unless branch.supplier_fee %>">
         <p class="govuk-body govuk-!-font-size-16 govuk-!-margin-0">
-          Supplier fee
+          <%= t('.calculator.supplier_fee') %>
         </p>
         <p class="govuk-body supplier-record__supplier-fee">
           <% if branch.supplier_fee %>
             <%= number_to_currency(branch.supplier_fee) %>
-          <% end%>
+          <% end %>
         </p>
       </div>
     </div>
