(chore) Make it clear to users why they are not permitted access to service
Trellocard: https://trello.com/c/2fbP2fUr/970-make-it-clear-to-users-why-they-are-not-permitted-access-to-service

--- a/app/views/shared/not_permitted.html.erb
+++ b/app/views/shared/not_permitted.html.erb
@@ -2,9 +2,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl"><%= t('.title') %></h1>
+      <h1 class="govuk-heading-xl"><%= t(".#{permission_required.to_s}.title") %></h1>
 
-      <p><%= t('.details') %></p>
+      <p><%= t(".#{permission_required.to_s}.details") %></p>
     </div>
   </div>
 </div>
