(fix) remove url from distance and download items when printing

--- a/app/assets/stylesheets/components/sidebar/_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/_sidebar.scss
@@ -2,3 +2,8 @@
 	background-color: govuk-colour("grey-4");
 	padding: 25px;
 }
+@media print {
+	.cmp-sidebar a[href]:after { 
+		content: none !important; 
+	}
+}
