--- a/app/assets/stylesheets/components/st-supplier-page/_st-supplier-page.scss
+++ b/app/assets/stylesheets/components/st-supplier-page/_st-supplier-page.scss
@@ -2,3 +2,8 @@
 	margin-right: 10px;
 	white-space: nowrap;
 }
+@media print {
+	.st-supplier-page__radius-list-item a[href]:after { 
+		content: none !important; 
+	}
+}
