--- a/app/views/supply_teachers/branches/_branch.html.erb
+++ b/app/views/supply_teachers/branches/_branch.html.erb
@@ -37,7 +37,7 @@
     </div>
   </div>
   <% if link_to_calculator? %>
-    <div class="govuk-!-padding-3 supplier-record__calculator">
+    <div class="govuk-!-padding-3 supplier-record__calculator <%= 'supplier-record__calculator--muted' unless branch.worker_cost %>">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <h4 class="govuk-heading-s"><%= t('.calculator.heading') %></h4>
@@ -56,7 +56,7 @@
             </div>
           </div>
         </div>
-        <div class="govuk-grid-column-one-third <%= 'supplier-record__calculator--muted' unless branch.worker_cost %>">
+        <div class="govuk-grid-column-one-third">
           <p class="govuk-body govuk-!-font-size-16 govuk-!-margin-0">
             <%= t('.calculator.worker_cost') %>
           </p>
@@ -66,7 +66,7 @@
             <% end %>
           </p>
         </div>
-        <div class="govuk-grid-column-one-third <%= 'supplier-record__calculator--muted' unless branch.agency_fee %>">
+        <div class="govuk-grid-column-one-third">
           <p class="govuk-body govuk-!-font-size-16 govuk-!-margin-0">
             <%= t('.calculator.agency_fee') %>
           </p>
