(feature) Prevent the form being submitted for JavaScript users
If a user types a number and hits return we don't want the form to
submit causing a page refresh. Instead we want our AJAX call to fire.

--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -73,7 +73,7 @@
     </div>
 
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-    <%= form_tag @form_path, method: :get do %>
+    <%= form_tag @form_path, method: :get, class: 'supplier-record__calculator-form' do %>
       <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
