(chore) update content of sign-in page

--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -21,6 +21,9 @@
         </p>
 
         <p>
+          <%= t('.dfe_signin.not_for_profit_html') %>
+        </p>
+        <p>
           <%= t('.dfe_signin.outside_england_html',
                 url: dfe_account_request_url) %>
         </p>
