--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -12,7 +12,6 @@
         <li><%= t('.use_this_service_to.hire_a_specific_person') %></li>
         <li><%= t('.use_this_service_to.find_a_managed_service_provider') %></li>
         <li><%= t('.use_this_service_to.view_the_rates') %></li>
-        <li><%= t('.use_this_service_to.check_the_breakdown_of_rates') %></li>
         <li><%= t('.use_this_service_to.create_a_shortlist') %></li>
         <li><%= t('.use_this_service_to.calculate_the_maximum') %></li>
       </ul>
@@ -38,31 +37,26 @@
         <%= t('.to_find_permanent_teaching_staff_html', url: 'https://www.gov.uk/guidance/list-a-teaching-job-at-your-school-on-teaching-vacancies') %>
       </p>
 
-      <h2 class="govuk-heading-m cmp-start-page__sub-heading"><%= t('.accreditation_of_suppliers') %></h2>
+      <h2 class="govuk-heading-m cmp-start-page__sub-heading"><%= t('.accreditation_of_agencies') %></h2>
 
       <p class="govuk-body"><%= t('.all_suppliers_have_undergone') %></p>
 
       <h2 class="govuk-heading-m cmp-start-page__sub-heading"><%= t('.buyers_obligations') %></h2>
 
-      <p class="govuk-body"><%= t('.this_service_contains_pricing_information') %></p>
+      <p class="govuk-body"><%= t('.this_service_contains_pricing_information_html', url: 'https://www.gov.uk/guidance/deal-for-schools-hiring-supply-teachers-and-agency-workers') %></p>
 
       <p class="govuk-body"><%= t('.by_using_the_service') %></p>
 
       <p class="govuk-body"><%= t('.in_consideration_of_being_given_use') %></p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><%= t('.keep_the_confidential_information_confidential') %></li>
-        <li><%= t('.not_disclose_use_or_exploit') %></li>
-        <li><%= t('.ensure_that_the_confidential_information') %></li>
-        <li><%= t('.immediately_notify_css') %></li>
+        <li><%= t('.keep_the_information_confidential') %></li>
+        <li><%= t('.only_use_the_information') %></li>
+        <li><%= t('.make_sure_the_confidential_information') %></li>
+        <li><%= t('.tell_ccs_if_suspect') %></li>
       </ul>
 
-      <p class="govuk-body"><%= t('.you_shall_inform_your_employees') %></p>
-
-      <p class="govuk-body"><%= t('.you_shall_ensure_only_employees') %></p>
-
-      <p class="govuk-body"><%= t('.by_using_this_service_you_agree') %></p>
-
+      <p class="govuk-body"><%= t('.you_must_tell_your_employees') %></p>
 
     </div>
   </div>
