--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -5,6 +5,12 @@
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
 
+    <% if flash[:notice] %>
+      <div class="govuk-inset-text cmp-inset-text--success">
+        <p class="govuk-body govuk-body-s"><%= flash[:notice] %></p>
+      </div>
+    <% end %>
+
     <div class="govuk-inset-text cmp-inset-text--success">
       <h2 class="govuk-heading-s"><%= t('.inputs_header') %></h2>
       <ul class="govuk-list govuk-list--bullet">
