(feature) Add DfE logo to start page

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -27,6 +27,7 @@
 @import "fm-supplier-record/fm-supplier-record";
 @import "inset-text/inset-text";
 @import "label/label";
+@import "logo/logo";
 @import "master-vendor-record/master-vendor-record";
 @import "mc-supplier-record/mc-supplier-record";
 @import "neutral-vendor-record/neutral-vendor-record";
