--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -5,6 +5,11 @@
 
       <h1 class="govuk-heading-xl"><%= t('.title') %></h1>
 
+      <div class="ccs-logo__dfe">
+        <p class="govuk-body-s"><%= t('.supported_by') %></p>
+        <%= image_tag('dfe_logo.png', alt: 'Department for Education') %>
+      </div>
+
       <p class="govuk-body"><%= t('.use_this_service_to.title') %></p>
 
       <ul class="govuk-list govuk-list--bullet">
