--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -1,3 +1,80 @@
-<h1>FacilitiesManagement::SelectLocations#index</h1>
-<p>Find me in app/views/facilities_management/select_locations/index.html.erb</p>
+<div>
+  <fieldset class="govuk-fieldset" aria-describedby="">
+    <h1 class="govuk-heading-xl">
+      Which regions do you need the service in?
+    </h1>
+  </fieldset>
+</div>
+<div class="govuk-grid-column-two-thirds">
 
+
+  <div class="govuk-accordion" data-module="accordion" id="region-accordion">
+    <% @regions.each do |key, value| %>
+      <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="region-<%= key %>"><%= value %></span>
+          </h2>
+        </div>
+        <div id="
+                    <% key %>-content" class="govuk-accordion__section-content" aria-labelledby="<%= value %>">
+
+          <% @subregions.each do |key2, value2| %>
+
+            <% if key2.start_with?(key) %>
+              <div class="govuk-form-group">
+                <fieldset class="govuk-fieldset" aria-describedby="<%= value2 %>">
+                  <div class="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="<%= key2 %>" name="<%= key2 %>" locationid="<%= value2 %>" type="checkbox" value="<%= key2 %>">
+                      <label id="<%= key2 %>_label" class="govuk-label govuk-checkboxes__label" for="<%= key2 %>">
+                        <%= value2 %>
+                      </label>
+                    </div>
+                </fieldset>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+
+    <div class="govuk-accordion__section ">
+      <div class="govuk-accordion__section-header">
+        <h2 class="govuk-accordion__section-heading">
+          <span class="govuk-accordion__section-button" id="region-OS01">International</span>
+        </h2>
+      </div>
+      <div id="OS01-content" class="govuk-accordion__section-content" aria-labelledby="International coverage">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="International coverage">
+            <div class="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="OS01" name="OS01" type="checkbox" locationid="International coverage" value="International coverage">
+                <label id="OS01_label" name="OS01_label" class="govuk-accordion__section-heading govuk-checkboxes__label" for="OS01">
+                  International coverage
+                </label>
+              </div>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+  </div>
+  <p>
+    <%= link_to 'Save and continue', '/facilities-management/select-locations', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+  </p>
+</div>
+<div class="govuk-grid-column-one-third">
+  <div class="filter-selection">
+    <header>
+      <div class="filter-selection__header">
+        <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
+        <h2 class="font-weight-700">
+          <span id="selected-location-count" name="selected-location-count" class="font-size--18">0</span>
+          Locations added
+        </h2>
+      </div>
+    </header>
+    <ul id="selected-fm-locations" name="selected-fm-locations" class="govuk-!-padding-0 font-size--10"></ul>
+  </div>
+</div>
