FM 4 - Added the ability to remove list items and cached for future calculation and display

--- a/app/views/facilities_management/home/index.html.erb
+++ b/app/views/facilities_management/home/index.html.erb
@@ -3,7 +3,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Buy or find Facilities Management services
+        Buy or find Facilities Management servicesa
       </h1>
 
       <p>Use this tool to to find suppliers for facilities management services, for one or more locations.</p>
@@ -14,7 +14,6 @@
         <li>buy FM services such as cleaning, landscaping and building repair work</li>
         <li>filter/order/sort suppliers by price</li>
       </ul>
-
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
