--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -61,7 +61,7 @@
     </div>
   </div>
   <p>
-    <%= link_to 'Save and continue', '/facilities-management/select-locations', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+    <%= link_to 'Save and continue', '/facilities-management/select-locations', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-locations-link', name:'save-locations-link'%>
   </p>
 </div>
 <div class="govuk-grid-column-one-third">
