FM4 - Content tweaks and services placeholder

--- a/app/views/facilities_management/home/index.html.erb
+++ b/app/views/facilities_management/home/index.html.erb
@@ -3,7 +3,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Buy or find Facilities Management servicesa
+        Buy or find Facilities Management services
       </h1>
 
       <p>Use this tool to to find suppliers for facilities management services, for one or more locations.</p>
