--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -1,9 +1,14 @@
+<a href="/facilities-management" class="govuk-back-link">Back</a>
+
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
     <h1 class="govuk-heading-xl">
-      Which regions do you need the service in?
+      Select your region
     </h1>
   </fieldset>
+  <p class="govuk-body">
+    Select/choose/pick/add one or multiple regions to give/provide<br> the location of your building/facilities
+  </p>
 </div>
 <div class="govuk-grid-column-two-thirds">
 
