WIP - FM tweeks to remove duplicated code

--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -53,7 +53,7 @@
     <% end %>
   </div>
   <p>
-    <%= link_to 'Save and continue', '/facilities-management/suppliers/longList', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-services-link', name:'save-services-link'%>
+    <%= link_to 'Continue', '/facilities-management/suppliers/longList', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-services-link', name:'save-services-link'%>
   </p>
 </div>
 <div class="govuk-grid-column-one-third">
@@ -63,7 +63,7 @@
         <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
         <h2 class="font-weight-700">
           <span id="selected-service-count" name="selected-service-count" class="font-size--18">0</span>
-          Services added
+          Services selected
         </h2>
       </div>
     </header>
