--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -80,7 +80,7 @@
     </div>
   </div>
   <p>
-    <%= link_to 'Save and continue', '/facilities-management/select-services', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-locations-link', name:'save-locations-link'%>
+    <%= link_to 'Continue', '/facilities-management/select-services', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-locations-link', name:'save-locations-link'%>
   </p>
 </div>
 <div class="govuk-grid-column-one-third">
@@ -90,7 +90,7 @@
         <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
         <h2 class="font-weight-700">
           <span id="selected-location-count" name="selected-location-count" class="font-size--18">0</span>
-          Locations added
+          Locations selected
         </h2>
       </div>
     </header>
